# ArcadeGames

./: CMakeLists.txt  connect4.cpp  connect4.h  main  main.cpp  menuC4.cpp  menuC4.h  menuXo.cpp  menuXo.h  player.cpp  player.h  valid_input.cpp  valid_input.h  xo.cpp  xo.h
connect 4/: connect4.cpp  connect4.h  menuC4.cpp  menuC4.h
player stuff/: player.cpp  player.h  valid_input.cpp  valid_input.h
xo/: menuXo.cpp  menuXo.h  xo.cpp  xo.h
